# lexicon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
bignato/include/: BigNato.h
include/: API_Lexicon.h  Junk.h  Lexicon.h
include/Lexicon/: AbstractFunction.h  AbstractGlobal.h  AbstractTypePolicy.h  AccessModifier.h  AnnotatedType.h  Array.h  BasicFunction.h  BasicTypeInfo.h  Component.h  Conversion.h  DataType.h  DeclareSpecifier.h  Default.h  Dispatcher.h  Element.h  ElementType.h  Environment.h  Exception.h  Field.h  Formula.h  FormulaHandler.h  Function.h  Function.hpp  GenericArray.h  GenericBodyArray.h  GenericPartArray.h  Global.h  Global.hpp  ICallableUnit.h  IElementProxy.h  IFormula.h  IFunction.h  IFunction.hpp  IGenericArgument.h  IGenericParameter.h  IGlobal.h  IGlobal.hpp  IRuntime.h  ISpecial.h  ITemplateBody.h  (+55 more)
include/Lexicon/Impl/: AbstractFunction.h  AbstractTypePolicy.cpp  AbstractTypePolicy.h  AccessModifier.h  Array.h  BasicQualifier.h  CompileModule.h  CompileUtility.h  Compiler.h  ConcreteFunction.cpp  ConcreteFunction.h  ConcretePolicy.cpp  ConcretePolicy.h  Construct.h  Conversion.h  CustomTraits.h  DataType.h  Declaration.cpp  Declaration.h  DeclareHeader.h  DeclareSpecifier.h  Default.h  Delegate.h  Dispatcher.h  Element.h  Environment.cpp  Environment.h  Exception.h  Expression.h  ExpressionType.h  External.h  ExternalHandle.h  ExternalInterface.cpp  ExternalInterface.h  ExternalManager.h  Field.cpp  Field.h  FieldDirectory.h  Function.h  FunctionBase.cpp  (+139 more)
include/Lexicon/Interfaces/: Element.h  Environment.h  FormulaManager.h  IElement.h  IEnvironment.h  IProject.h  IScript.h  IdentityManager.h  Interface.h  InterfaceManager.h  InterfaceSingleton.h  LinkMessenger.h  ObjectPolicyManager.h  ProcedureHandler.h  Project.h  ProjectClient.h  ProjectManager.h  ReportManager.h  Script.h
native/include/Lexicon/: Engine.h
native/include/Lexicon/Engine/: AbstractType.h  BasicFormula.h  CompileUtility.h  Component.h  ConcreteFunction.h  ConcreteGlobal.h  ConcretePolicy.h  ConcreteType.h  Conversion.h  Declaration.h  DefaultClient.h  DynamicTupleElement.h  Element.h  Environment.h  Expression.h  ExpressionType.h  Field.h  FunctionBase.h  FunctionData.h  FunctionInfo.h  FunctionNode.h  GenericBase.h  GenericFunction.h  GenericType.h  GlobalBase.h  GlobalData.h  GlobalVariable.h  HeaderSettings.h  HierarchyData.h  IElementImpl.h  IFunction.h  IFunctionImpl.h  IGlobalImpl.h  IProjectImpl.h  IScriptImpl.h  ISpecializable.h  ITypeInfo.h  ITypeInfoImpl.h  InfoBase.h  InheritData.h  (+69 more)
native/include/Lexicon/Engine/Impl/: EngineEnum.h  FunctionRegister.h  IElementHeader.h
native/src/Lexicon/Engine/: AbstractType.cpp  CompileUtility.cpp  Component.cpp  ConcreteFunction.cpp  ConcretePolicy.cpp  ConcreteType.cpp  Conversion.cpp  Declaration.cpp  Element.cpp  Environment.cpp  Field.cpp  FunctionBase.cpp  FunctionData.cpp  GenericBase.cpp  GenericFunction.cpp  GenericType.cpp  GlobalBase.cpp  HierarchyData.cpp  IElementImpl.cpp  IProjectImpl.cpp  IScriptImpl.cpp  ITypeInfo.cpp  ITypeInfoImpl.cpp  InfoBase.cpp  InputStream.cpp  Instruction.cpp  Literal.cpp  LiteralManager.cpp  Operand.cpp  Operation.cpp  OverloadEntry.cpp  OverloadInput.cpp  OverloadKey.cpp  ParseHandler.cpp  ParseModule.cpp  Parser.cpp  PolicyBase.cpp  ProcessContext.cpp  Project.cpp  QualifiedField.cpp  (+16 more)
src/: main.cpp
src/Lexicon/: AbstractTypePolicy.cpp  BasicTypeInfo.cpp  Component.cpp  Conversion.cpp  Dispatcher.cpp  Element.cpp  Environment.cpp  Field.cpp  FormulaHandler.cpp  ICallableUnit.cpp  ITemplatePart.cpp  IType.cpp  ITypeInfo.cpp  ITypePolicy.cpp  Object.cpp  ObjectInfo.cpp  ObjectPolicy.cpp  ObjectPolicyHandle.cpp  PCH.h  QualifiedField.cpp  QualifiedType.cpp  Reflection.cpp  Type.cpp  TypeID.cpp  TypeInfo.cpp  Variable.cpp  VariableType.cpp
src/Lexicon/Impl/: Element.cpp  InputStream.cpp  PCH.cpp  ParseHandler.cpp  ParseModule.cpp  Parser.cpp  ProcessContext.cpp  Project.cpp  Script.cpp  TokenHandler.cpp  TokenStream.cpp
src/Lexicon/Impl/Native/: Conversion.h  Declaration.h  FunctionBase.cpp  FunctionBase.h  GlobalData.h  InputStream.cpp  Literal.cpp  LiteralManager.cpp  Operand.h  OverloadEntry.cpp  OverloadEntry.h  OverloadFlag.h  OverloadInput.h  OverloadKey.cpp  ParseModule.cpp  ParseModule.h  Parser.h  PolicyBase.h  RoutineBase.h  RoutineCompiler.cpp  RoutineCompiler.h  Scope.cpp  Solution.h  Target.h  Token.h  TokenStream.cpp  VoidPolicy.h
src/Lexicon/Interfaces/: Element.cpp  Environment.cpp  FormulaManager.cpp  IdentityManager.cpp  InterfaceManager.cpp  LinkMessenger.cpp  ObjectPolicyManager.cpp  ProcedureHandler.cpp  Project.cpp  ProjectManager.cpp  ReportManager.cpp  Script.cpp
